assets/css/style.css
/* Link to Google Fonts Imports */
@import url('https://fonts.googleapis.com/css2?family=Barriecito&family=Quicksand:wght@300..700&display=swap');

/* Variable Fonts and Colors */
:root {
    --primary-font: "Barriecito", sans-serif;
    --secondary-font: "Quicksand", sans-serif;
    --primary-color: #ae0000;
    --secondary-color: #ffce1b;
    --tertiary-color: #FDFBD4;
    --highlight-color: #0a5d00;
}

/* Global Styles */

body {
    background-color: var(--highlight-color);
    background: url("../images/mixedspices.jpg") no-repeat center center/cover;
    padding: 74px;
}

.sub-heading {
    font-family: var(--primary-font);
    color: var(--primary-color);
}

header,
main {
    background-color: var(--tertiary-color);
    padding: 2rem;
}

#header {
    background-image: url("../images/redpepper.png");
    background-color: var(--secondary-color);
    background-position: center top;
  }

h1,
h2 {
    font-family: var(--primary-font);
    color: var(--primary-color);
    text-decoration: underline;
}

h3,
h5 {
    font-family: var(--primary-font);
    color: var(--primary-color);
}

h5 span {
    background-color: var(--secondary-color);
    color: var(--primary-color);
    font-family: var(--primary-font);
    padding: 0.5rem;
}

.sub-heading span {
    font-family: var(--primary-font);
    background-color: var(--primary-color);
    color: var(--secondary-color);
    padding: 4px 10px;
}

.display-3 span {
    background-color: var(--secondary-color);
    padding: 5px 20px;
}

.moletext > p {
    font-family: var(--secondary-font);
    color: var(--primary-color);
} 

/* Navbar Styles */

.navbar-brand {
    font-family: var(--primary-font);
    color: var(--secondary-color);
    font-size: xx-large;
}

.navbar-brand:hover {
    color: var(--secondary-color);
}

.nav-text {
    font-family: var(--primary-font);
    color: var(--secondary-color);
    font-size: larger;
}

.nav-text:hover {
    color: var(--tertiary-color);
}

.dropdown-menu {
    background-color: var(--primary-color);
}

#navbar {
    background-color: var(--primary-color);
}

.navbar-nav .nav-item .active {
    text-decoration: underline;
    color: var(--tertiary-color);
}

/* Carousel Home Styles */

.carousel-inner {
    height: 0;
    padding-bottom: 65%;
  }
  
  .carousel-item {
    position: absolute !important;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
  }
  
  .carousel-item img {
    height: 100%; 
    object-fit: cover; 
  }

  .carousel-text {
    padding-top: 45px;
    font-family: var(--secondary-font);
    color: var(--primary-color);
    font-weight: bold;
  }

.mole {
    width: 325px;
    height: 400px;
    border: 10px solid var(--primary-color);
     margin-top: 1em;
}

.monthlycurry {
    display: flex;
    justify-content: center;
}

.moletext {
    margin-top: 125px;
    padding-left: 20px;
}

.location-cards {
    display: flex;
    justify-content: space-around;
} 

.card, 
.list-group-item {
    border: none;
    background-color: var(--secondary-color);
    color: var(--primary-color);
    font-family: var(--secondary-font);
} 


/* Footer Styling Section*/

#contact {
    background-color: var(--primary-color);
    padding-top: 20px;
    border: 10px solid var(--secondary-color);
}

#contact h2 {
    color: var(--secondary-color);
}

#contact .social-links i {
    color: var(--secondary-color);
    font-size: 1.9rem;
    transition: color 0.3s ease-in-out;
}

#contact .social-links i:hover {
    color: var(--tertiary-color);
}

.social-links h3 {
    color: var(--secondary-color);
    padding-left: 5px;
    padding-right: 20px;
}

@media screen and (min-width: 768px) {
    #navbar {
        max-width: 100%;
    }
}

